// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PrimaryScreenView > matches the DOM-structure snapshot: all-clear (4d) 1`] = `
<div>
  <div
    data-connection-state="connected"
    data-role="primary-screen"
  >
    <section
      aria-label="Feed"
      data-connection-state="connected"
      data-role="feed"
      role="region"
    >
      <header
        data-role="feed-header"
      >
        <div
          data-role="kiln-mark"
        >
          <span
            aria-hidden="true"
            data-role="kiln-glyph"
          />
          <span
            data-role="kiln-wordmark"
          >
            Kiln
          </span>
        </div>
        <span
          data-role="feed-status"
        >
          5 streams · nothing needs you
        </span>
      </header>
      <div
        data-role="backlog"
      >
        <div
          data-role="feed-empty"
        >
          <span
            aria-hidden="true"
            data-role="feed-empty-mark"
          />
          <span
            data-role="feed-empty-title"
          >
            All clear
          </span>
          <p
            data-role="feed-empty-body"
          >
            Nothing needs you right now. I’m keeping your streams moving and I’ll speak up the moment something needs a decision.
          </p>
          <div
            data-role="feed-empty-status"
          >
            <span
              aria-hidden="true"
              data-role="feed-empty-pulse"
            />
            <span>
              3 building · 2 idle · last word 6m ago
            </span>
          </div>
        </div>
      </div>
    </section>
    <div
      data-role="activity-row"
    />
    <div
      data-dock-state="listening"
      data-role="dock"
    >
      <div
        data-role="dock-controls"
      >
        <button
          aria-label="Talk"
          aria-pressed="true"
          data-dock-state="listening"
          data-role="dock-talk"
          type="button"
        >
          <span
            aria-hidden="true"
            data-role="dock-mic"
          >
            <span
              data-role="dock-mic-orb"
            />
            <span
              data-role="dock-mic-capsule"
            />
            <span
              data-role="dock-mic-arc"
            />
            <span
              data-role="dock-mic-stem"
            />
          </span>
          <span
            data-role="dock-label"
          >
            Listening…
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PrimaryScreenView > matches the DOM-structure snapshot: blocker + while-you-were-away (4a) 1`] = `
<div>
  <div
    data-connection-state="connected"
    data-role="primary-screen"
  >
    <section
      aria-label="Feed"
      data-connection-state="connected"
      data-role="feed"
      role="region"
    >
      <header
        data-role="feed-header"
      >
        <div
          data-role="kiln-mark"
        >
          <span
            aria-hidden="true"
            data-role="kiln-glyph"
          />
          <span
            data-role="kiln-wordmark"
          >
            Kiln
          </span>
        </div>
        <span
          data-role="feed-status"
        >
          1 blocker · 3 updates
        </span>
      </header>
      <div
        data-role="backlog"
      >
        <div
          data-role="backlog-slot"
        >
          <article
            data-kind="blocker"
            data-role="feed-card"
          >
            <div
              data-role="feed-card-head"
            >
              <span
                aria-hidden="true"
                data-role="feed-card-dot"
              />
              <span
                data-role="feed-card-label"
              >
                Auth
              </span>
              <span
                data-role="feed-card-tag"
              >
                Blocker
              </span>
              <span
                data-role="feed-card-age"
              >
                now
              </span>
            </div>
            <p
              data-role="feed-card-body"
            >
              The /auth endpoint hands back both a session cookie and a JWT. Which should the client trust as the source of truth?
            </p>
          </article>
        </div>
        <div
          data-role="backlog-slot"
        >
          <div
            data-role="feed-divider"
          >
            While you were away
          </div>
          <article
            data-kind="update"
            data-role="feed-card"
          >
            <div
              data-role="feed-card-head"
            >
              <span
                data-role="feed-card-label"
              >
                Rate limiting
              </span>
              <span
                data-role="feed-card-tag"
              >
                Update
              </span>
              <span
                data-role="feed-card-age"
              >
                2m
              </span>
            </div>
            <p
              data-role="feed-card-body"
            >
              Added a fixed-window limiter on /auth — 20 requests a minute per IP. Suite is green.
            </p>
          </article>
        </div>
        <div
          data-role="backlog-slot"
        >
          <article
            data-kind="update"
            data-role="feed-card"
          >
            <div
              data-role="feed-card-head"
            >
              <span
                data-role="feed-card-label"
              >
                Email
              </span>
              <span
                data-role="feed-card-tag"
              >
                Update
              </span>
              <span
                data-role="feed-card-age"
              >
                14m
              </span>
            </div>
            <p
              data-role="feed-card-body"
            >
              Drafted three subject lines for the password-reset email and kept the clearest.
            </p>
          </article>
        </div>
        <div
          data-role="backlog-slot"
        >
          <article
            data-kind="update"
            data-role="feed-card"
          >
            <div
              data-role="feed-card-head"
            >
              <span
                data-role="feed-card-label"
              >
                Search
              </span>
              <span
                data-role="feed-card-tag"
              >
                Update
              </span>
              <span
                data-role="feed-card-age"
              >
                1h
              </span>
            </div>
            <p
              data-role="feed-card-body"
            >
              Reindexed the product catalog; queries are back under 40ms.
            </p>
          </article>
        </div>
      </div>
    </section>
    <div
      data-role="activity-row"
    />
    <div
      data-dock-state="listening"
      data-role="dock"
    >
      <div
        data-role="dock-controls"
      >
        <button
          aria-label="Talk"
          aria-pressed="true"
          data-dock-state="listening"
          data-role="dock-talk"
          type="button"
        >
          <span
            aria-hidden="true"
            data-role="dock-mic"
          >
            <span
              data-role="dock-mic-orb"
            />
            <span
              data-role="dock-mic-capsule"
            />
            <span
              data-role="dock-mic-arc"
            />
            <span
              data-role="dock-mic-stem"
            />
          </span>
          <span
            data-role="dock-label"
          >
            Listening…
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PrimaryScreenView > matches the DOM-structure snapshot: preview (4c) 1`] = `
<div>
  <div
    data-connection-state="connected"
    data-role="primary-screen"
  >
    <section
      aria-label="Feed"
      data-connection-state="connected"
      data-role="feed"
      role="region"
    >
      <header
        data-role="feed-header"
      >
        <div
          data-role="kiln-mark"
        >
          <span
            aria-hidden="true"
            data-role="kiln-glyph"
          />
          <span
            data-role="kiln-wordmark"
          >
            Kiln
          </span>
        </div>
        <span
          data-role="feed-status"
        >
          5 streams · nothing needs you
        </span>
      </header>
      <div
        data-role="backlog"
      >
        <div
          data-role="backlog-slot"
        >
          <article
            data-kind="preview"
            data-role="feed-card"
          >
            <div
              data-role="feed-card-head"
            >
              <span
                data-role="feed-card-label"
              >
                Auth
              </span>
              <span
                data-role="feed-card-tag"
              >
                Preview
              </span>
              <span
                data-role="feed-card-age"
              >
                now
              </span>
            </div>
            <p
              data-role="feed-card-body"
            >
              Here's the login screen running against the live endpoint.
            </p>
            <img
              alt="Auth"
              data-role="feed-card-image"
              src="https://cdn.example/login.png"
            />
          </article>
        </div>
        <div
          data-role="backlog-slot"
        >
          <article
            data-kind="update"
            data-role="feed-card"
          >
            <div
              data-role="feed-card-head"
            >
              <span
                data-role="feed-card-label"
              >
                Rate limiting
              </span>
              <span
                data-role="feed-card-tag"
              >
                Update
              </span>
              <span
                data-role="feed-card-age"
              >
                2m
              </span>
            </div>
            <p
              data-role="feed-card-body"
            >
              Added a fixed-window limiter on /auth — 20 requests a minute per IP. Suite is green.
            </p>
          </article>
        </div>
      </div>
    </section>
    <div
      data-role="activity-row"
    />
    <div
      data-dock-state="listening"
      data-role="dock"
    >
      <div
        data-role="dock-controls"
      >
        <button
          aria-label="Talk"
          aria-pressed="true"
          data-dock-state="listening"
          data-role="dock-talk"
          type="button"
        >
          <span
            aria-hidden="true"
            data-role="dock-mic"
          >
            <span
              data-role="dock-mic-orb"
            />
            <span
              data-role="dock-mic-capsule"
            />
            <span
              data-role="dock-mic-arc"
            />
            <span
              data-role="dock-mic-stem"
            />
          </span>
          <span
            data-role="dock-label"
          >
            Listening…
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PrimaryScreenView > matches the DOM-structure snapshot: proposal card with Accept 1`] = `
<div>
  <div
    data-connection-state="connected"
    data-role="primary-screen"
  >
    <section
      aria-label="Feed"
      data-connection-state="connected"
      data-role="feed"
      role="region"
    >
      <header
        data-role="feed-header"
      >
        <div
          data-role="kiln-mark"
        >
          <span
            aria-hidden="true"
            data-role="kiln-glyph"
          />
          <span
            data-role="kiln-wordmark"
          >
            Kiln
          </span>
        </div>
        <span
          data-role="feed-status"
        >
          3 streams · nothing needs you
        </span>
      </header>
      <div
        data-role="backlog"
      >
        <div
          data-role="backlog-slot"
        >
          <article
            data-kind="proposal"
            data-role="feed-card"
          >
            <div
              data-role="feed-card-head"
            >
              <span
                data-role="feed-card-label"
              >
                Login Redesign
              </span>
              <span
                data-role="feed-card-tag"
              >
                Proposal
              </span>
              <span
                data-role="feed-card-age"
              >
                1m
              </span>
            </div>
            <p
              data-role="feed-card-body"
            >
              Rework the login screen to a single-column layout with inline validation.
            </p>
            <div
              data-role="feed-card-actions"
            >
              <button
                data-role="proposal-accept"
                type="button"
              >
                Accept
              </button>
            </div>
          </article>
        </div>
      </div>
    </section>
    <div
      data-role="activity-row"
    />
    <div
      data-dock-state="listening"
      data-role="dock"
    >
      <div
        data-role="dock-controls"
      >
        <button
          aria-label="Talk"
          aria-pressed="true"
          data-dock-state="listening"
          data-role="dock-talk"
          type="button"
        >
          <span
            aria-hidden="true"
            data-role="dock-mic"
          >
            <span
              data-role="dock-mic-orb"
            />
            <span
              data-role="dock-mic-capsule"
            />
            <span
              data-role="dock-mic-arc"
            />
            <span
              data-role="dock-mic-stem"
            />
          </span>
          <span
            data-role="dock-label"
          >
            Listening…
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PrimaryScreenView > matches the DOM-structure snapshot: updates only (4b) 1`] = `
<div>
  <div
    data-connection-state="connected"
    data-role="primary-screen"
  >
    <section
      aria-label="Feed"
      data-connection-state="connected"
      data-role="feed"
      role="region"
    >
      <header
        data-role="feed-header"
      >
        <div
          data-role="kiln-mark"
        >
          <span
            aria-hidden="true"
            data-role="kiln-glyph"
          />
          <span
            data-role="kiln-wordmark"
          >
            Kiln
          </span>
        </div>
        <span
          data-role="feed-status"
        >
          5 streams · nothing needs you
        </span>
      </header>
      <div
        data-role="backlog"
      >
        <div
          data-role="backlog-slot"
        >
          <article
            data-kind="update"
            data-role="feed-card"
          >
            <div
              data-role="feed-card-head"
            >
              <span
                data-role="feed-card-label"
              >
                Rate limiting
              </span>
              <span
                data-role="feed-card-tag"
              >
                Update
              </span>
              <span
                data-role="feed-card-age"
              >
                2m
              </span>
            </div>
            <p
              data-role="feed-card-body"
            >
              Added a fixed-window limiter on /auth — 20 requests a minute per IP. Suite is green.
            </p>
          </article>
        </div>
        <div
          data-role="backlog-slot"
        >
          <article
            data-kind="update"
            data-role="feed-card"
          >
            <div
              data-role="feed-card-head"
            >
              <span
                data-role="feed-card-label"
              >
                Email
              </span>
              <span
                data-role="feed-card-tag"
              >
                Update
              </span>
              <span
                data-role="feed-card-age"
              >
                14m
              </span>
            </div>
            <p
              data-role="feed-card-body"
            >
              Drafted three subject lines for the password-reset email and kept the clearest.
            </p>
          </article>
        </div>
        <div
          data-role="backlog-slot"
        >
          <article
            data-kind="update"
            data-role="feed-card"
          >
            <div
              data-role="feed-card-head"
            >
              <span
                data-role="feed-card-label"
              >
                Search
              </span>
              <span
                data-role="feed-card-tag"
              >
                Update
              </span>
              <span
                data-role="feed-card-age"
              >
                1h
              </span>
            </div>
            <p
              data-role="feed-card-body"
            >
              Reindexed the product catalog; queries are back under 40ms.
            </p>
          </article>
        </div>
      </div>
    </section>
    <div
      data-role="activity-row"
    />
    <div
      data-dock-state="listening"
      data-role="dock"
    >
      <div
        data-role="dock-controls"
      >
        <button
          aria-label="Talk"
          aria-pressed="true"
          data-dock-state="listening"
          data-role="dock-talk"
          type="button"
        >
          <span
            aria-hidden="true"
            data-role="dock-mic"
          >
            <span
              data-role="dock-mic-orb"
            />
            <span
              data-role="dock-mic-capsule"
            />
            <span
              data-role="dock-mic-arc"
            />
            <span
              data-role="dock-mic-stem"
            />
          </span>
          <span
            data-role="dock-label"
          >
            Listening…
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
